small adjustment for vmchecker